# Guerilla

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  README_DEV.md  pyproject.toml
docs/: ADAPTER_CONTRACT.md  ARCHITECTURE_DECISIONS.md  CODEX_BUILD_PLAN.md  DATA_MODEL.md  ERROR_REGISTRY.md  EVALUATION_PLAN.md  GATE_B_COMPLETION_REPORT.md  GATE_C_COMPLETION_REPORT.md  GATE_C_ENTRY_VERIFICATION_REPORT.md  GLCP_CORE_SPEC.md  GLOSSARY.md  GRAPH_RECORD_FORMAT.md  GUERILLA_WORKFLOW_CURRENT.md  MVP_SCOPE.md  PHASE_09_COMPLETION_REPORT.md  PHASE_10_COMPLETION_REPORT.md  PHASE_11_COMPLETION_REPORT.md  PHASE_12_COMPLETION_REPORT.md  PHASE_13_COMPLETION_REPORT.md  PHASE_14_COMPLETION_REPORT.md  PHASE_15_COMPLETION_REPORT.md  PROJECTION_SPEC.md  SECURITY_MODEL.md  STATE_BOUNDARY_MODEL.md  STORAGE_AND_RECOVERY.md  TEST_MATRIX.md  contract_inventory.json
registries/: README.md  capabilities.json  conflict_types.json  error_codes.json  extension_namespaces.json  node_types.json  relationship_types.json
schemas/: README.md  actor.schema.json  adapter_act.schema.json  adapter_descriptor.schema.json  adapter_evaluate.schema.json  adapter_observe.schema.json  adapter_reconcile.schema.json  archive_seal.schema.json  authority.schema.json  authority_envelope.schema.json  capability.schema.json  commit.schema.json  common.schema.json  conflict.schema.json  derived_projection.schema.json  edge.schema.json  error.schema.json  extension_namespace.schema.json  external_identity.schema.json  graph_header.schema.json  node.schema.json  payload_ref.schema.json  payload_reference.schema.json  projection_metadata.schema.json  protocol_envelope.schema.json  protocol_error.schema.json  protocol_request.schema.json  protocol_response.schema.json  provenance.schema.json  snapshot.schema.json  state_boundary.schema.json  (+3 more)
(+126 files in other folders)
